src/test/deca/context/valid/provided/class_with_methode.deca
class A{

  protected int c ;
  protected int b ;

 

 void setb(int b) {
   this.b = b ;
}
}


 
